--- a/NM2.1.ipynb
+++ b/NM2.1.ipynb
@@ -217,7 +217,7 @@
    ],
    "source": [
     "#ищем q для критерия окончания - максимум модуля производной \n",
-    "q=abs(dfi(7,8))\n",
+    "q=abs(dfi(8, 7.3))\n",
     "q"
    ]
   },
